no more font, fixing spacing

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,34 +1,3 @@
-@font-face {
-  font-family: 'CommitMono';
-  font-weight: 450;
-  src: url(/fonts/CommitMono-450-Regular.otf);
-}
-
-@font-face {
-  font-family: 'CommitMono';
-  font-weight: 450;
-  font-style: italic;
-  src: url(/fonts/CommitMono-450-Italic.otf);
-}
-
-@font-face {
-  font-family: 'CommitMono';
-  font-weight: 700;
-  src: url(/fonts/CommitMono-700-Regular.otf);
-}
-
-@font-face {
-  font-family: 'CommitMono';
-  font-weight: 700;
-  font-style: italic;
-  src: url(/fonts/CommitMono-700-Italic.otf);
-}
-
-// Setting default font
-* {
-  font-family: CommitMono, Roboto;
-}
-
 .text-title {
   font-weight: 700;
   font-size: 20px;
